--- a/style.css
+++ b/style.css
@@ -4,19 +4,19 @@
     box-sizing: border-box;
 }
 button {
-    width: 70px;
+    width: 100px;
     height: 50px;
 }
 
 input {
     height: 50px;
-    width: 200px;
+    width: 700px;
 }
 
 header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: first baseline;
     padding: 20px;
     height: 100px;
     background-color: black;
