--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
     justify-content: first baseline;
     padding: 20px;
     height: 100px;
-    background-color: black;
+
 }
 
 img {
@@ -34,5 +34,5 @@ img {
     gap: 10px;
     padding: 10px;
     flex-grow: 1;
-    background-color: black;
+    background-color: antiquewhite;
 }
